--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ rope==0.14.0
 simplejson==3.16.0
 six==1.12.0
 typed-ast==1.4.0
+Unidecode==1.1.1
 urllib3==1.24.3
 Werkzeug==0.16.0
 wrapt==1.11.2
